=head1 NAME

Changes - HTTPD::Bench::ApacheBench change logfile

=head1 CHANGES

all changes without author attribution are by Adi Fairbank

=over 3

=item 0.72 - Oct 18, 2011

bugfix: fix a segmentation fault caused by improperly malloc'd memory for the auto_cookie feature
(see rt.cpan.org bug #71698)

increase default buffersize from 16384 (16K) to 262144 (256K) - used for http response body when memory >= 3

increase default request_buffersize from 2048 (2K) to 8192 (8K)

change timing logic to not include the time taken to generate a POST body using postdata
coderefs; this allows using the postdata coderefs to do other useful things like inserting
random delays to simulate real-world use - see perldoc for details

add support for postdata functions that can generate CGI data for body of POST request
by looking at the response body from the previous request in run - see perldoc for syntax

minor changes so Run class can be subclassed

add INSTALL.SKIP so *.[ch] files do not get installed to perl lib path unnecessarily

fix t/test3_execute.t to skip call to execute() if http server on localhost is not running,
to stop cpantesters from rightfully complaining

=item 0.71 - Nov 15, 2010

implement strnstr() function since glibc does not have it (in src/apachebench/util.c)

reorganize all C code into logically separated libraries: src/apachebench/*.[ch]

remove includes to apache header files ap.h, ap_config.h, ap_ctype.h, os.h, os-win32.h, etc;
now we rely completely on system includes

=item 0.70 - Nov 14, 2010

add support for dynamic cookie management within runs (emulate what browsers do):
- read "Set-Cookie:" headers from each response and append corresponding "Cookie:"
  headers to subsequent requests later in same run
- feature turned on by default, but can be disabled by run

new method $b->num_runs() to return the number of runs currently configured

clean up XS code some more, renaming variables to be more sensible
